--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -4,10 +4,11 @@ info.app.version=@project.version@
 server.port=8003
 spring.application.name=api-gateway
 spring.boot.admin.url=http://localhost:8009
+management.security.enabled=false
 logging.path=/Users/wujunshen/Downloads
 eureka.instance.hostname=gateway
 eureka.instance.appname=api-gateway
-eureka.instance.prefer-ip-address=true
+eureka.instance.prefer-ip-address=false
 eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
 zuul.routes.microservice-books.path=/api-gateway/v1/**
 hystrix.command.default.execution.timeout.enabled=false
