--- a/spring-cloud-consumer-book/src/main/resources/application.properties
+++ b/spring-cloud-consumer-book/src/main/resources/application.properties
@@ -31,4 +31,7 @@ spring.redis.pool.min-idle=0
 spring.redis.pool.max-wait=-1
 #spring.redis.cluster.nodes=ip1:port1,ip2:port2
 #spring.redis.cluster.max-redirects=6
+spring.boot.admin.url=http://localhost:8009
+management.security.enabled=false
+logging.path=/Users/wujunshen/Downloads
 
