--- a/spring-cloud-service-discovery/src/main/resources/application.properties
+++ b/spring-cloud-service-discovery/src/main/resources/application.properties
@@ -4,7 +4,7 @@ server.context-path=/discovery
 eureka.instance.hostname=discovery
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:${server.port}/discovery/eureka/
+eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
 info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
