--- a/spring-cloud-admin-server/pom.xml
+++ b/spring-cloud-admin-server/pom.xml
@@ -102,6 +102,10 @@
             <artifactId>spring-boot-admin-server</artifactId>
             <version>1.5.3</version>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
