--- a/spring-cloud-aggregator/pom.xml
+++ b/spring-cloud-aggregator/pom.xml
@@ -62,6 +62,10 @@
             <groupId>org.webjars</groupId>
             <artifactId>hal-browser</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
