--- a/spring-cloud-api-gateway/pom.xml
+++ b/spring-cloud-api-gateway/pom.xml
@@ -113,6 +113,10 @@
             <groupId>org.jolokia</groupId>
             <artifactId>jolokia-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
