--- a/spring-cloud-consumer-book/pom.xml
+++ b/spring-cloud-consumer-book/pom.xml
@@ -125,6 +125,10 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-stream-binder-rabbit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
