--- a/spring-cloud-monitor-dashboard/pom.xml
+++ b/spring-cloud-monitor-dashboard/pom.xml
@@ -64,6 +64,10 @@
             <groupId>org.webjars</groupId>
             <artifactId>hal-browser</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
