--- a/spring-cloud-service-discovery/pom.xml
+++ b/spring-cloud-service-discovery/pom.xml
@@ -48,6 +48,10 @@
             <groupId>org.webjars</groupId>
             <artifactId>hal-browser</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
         <!--<dependency>-->
         <!--<groupId>org.springframework.cloud</groupId>-->
         <!--<artifactId>spring-cloud-config-client</artifactId>-->
