--- a/spring-cloud-api-gateway/src/main/resources/application.properties
+++ b/spring-cloud-api-gateway/src/main/resources/application.properties
@@ -15,7 +15,7 @@ server.tomcat.min-spare-threads=64
 zuul.host.maxTotalConnections=100000
 zuul.host.maxPerRouteConnections=10000
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=whatsfuck1979
 spring.datasource.hikari.connection-test-query=select 1 from dual
@@ -31,14 +31,14 @@ audience.base64Secret=MDk4ZjZiY2Q0NjIxZDM3M2NhZGU0ZTgzMjYyN2I0ZjY=
 audience.name=restapiuser
 audience.expiresSecond=7200
 spring.sleuth.sampler.percentage=1.0
-spring.rabbitmq.host=172.104.119.101
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=wujunshen
 spring.rabbitmq.password=wujunshen
 spring.boot.admin.url=http://admin:8009
 management.security.enabled=false
 spring.redis.database=0
-spring.redis.host=172.104.119.101
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
 spring.redis.timeout=20000
