--- a/spring-cloud-consumer-book/src/main/resources/application.properties
+++ b/spring-cloud-consumer-book/src/main/resources/application.properties
@@ -8,7 +8,7 @@ eureka.instance.prefer-ip-address=false
 eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
 eureka.instance.appname=microservice-consumer-books
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=whatsfuck1979
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -21,7 +21,7 @@ spring.datasource.hikari.minimum-idle=100
 mybatis.mapperLocations=classpath*:sqlmap/*.xml
 mybatis.typeAliasesPackage=com.wujunshen.entity
 spring.redis.database=0
-spring.redis.host=172.104.119.101
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
 spring.redis.timeout=20000
@@ -32,7 +32,7 @@ spring.redis.pool.max-wait=-1
 #spring.redis.cluster.nodes=ip1:port1,ip2:port2
 #spring.redis.cluster.max-redirects=6
 spring.sleuth.sampler.percentage=1.0
-spring.rabbitmq.host=172.104.119.101
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=wujunshen
 spring.rabbitmq.password=wujunshen
