--- a/spring-cloud-provider-book/src/main/resources/application.properties
+++ b/spring-cloud-provider-book/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8002
 spring.application.name=microservice-books
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
-spring.datasource.url=jdbc:mysql://172.104.119.101:3306/test?characterEncoding=UTF-8&useSSL=false
+spring.datasource.url=jdbc:mysql://localhost:3306/test?characterEncoding=UTF-8&useSSL=false
 spring.datasource.username=root
 spring.datasource.password=whatsfuck1979
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -21,14 +21,14 @@ info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
 spring.sleuth.sampler.percentage=1.0
-spring.rabbitmq.host=172.104.119.101
+spring.rabbitmq.host=localhost
 spring.rabbitmq.port=5672
 spring.rabbitmq.username=wujunshen
 spring.rabbitmq.password=wujunshen
 spring.boot.admin.url=http://admin:8009
 management.security.enabled=false
 spring.redis.database=0
-spring.redis.host=172.104.119.101
+spring.redis.host=localhost
 spring.redis.port=6379
 spring.redis.password=
 spring.redis.timeout=20000
