--- a/spring-cloud-service-discovery/src/main/resources/application.properties
+++ b/spring-cloud-service-discovery/src/main/resources/application.properties
@@ -1,10 +1,13 @@
 spring.application.name=microservice-discovery
 server.port=8001
 server.context-path=/discovery
-eureka.instance.hostname=discovery
+eureka.instance.hostname=${hostname:localhost}
+eureka.instance.prefer-ip-address=true
+eureka.server.peer-eureka-nodes-update-interval-ms=60000
+eureka.server.enable-self-preservation=false
 eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=false
-eureka.client.serviceUrl.defaultZone=http://discovery:8001/discovery/eureka/
+eureka.client.serviceUrl.defaultZone=http://${eureka.instance.hostname}:8001/discovery/eureka/
 info.app.name=@project.name@
 info.app.description=@project.description@
 info.app.version=@project.version@
